--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hapi/hapi": "^21.3.10",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
-    "mongoose": "^8.6.0"
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.4"
   }
 }
