--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "dependencies": {
     "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.10",
+    "@hapi/jwt": "^3.2.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "hapi-rate-limit": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.4"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.8"
   }
 }
