--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "hapi-swagger": "^17.3.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.5",
     "puppeteer": "^24.9.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "twilio": "^5.8.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10"
